styles/styles.css
*, *::before, *::after{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root{
	--box-color1: hsl(31, 77%, 52%);
	--box-color2: hsl(184, 100%, 22%);
	--box-color3: hsl(179, 100%, 13%);

	--paragraph-color: hsla(0, 0%, 100%, 0.75);
	--neutral-color: hsl(0, 0%, 95%);

	--font-family1:'Lexend Deca', sans-serif;
	--font-family2:'Big Shoulders Display', cursive;
	--fw-normal: 400;
	--fw-bolder:700;
	--border-radius: 10px;
}

body{
	font-size: 15px;
	font-family: var(--font-family1);
	max-width:1920px;
	background: var(--neutral-color);
}


.container{
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 4rem 2rem;
}
/*
for tablet and desktop devices*/

@media (min-width: 767px){
	.container{
		flex-direction: row;
		padding: 6rem 6rem;
		/*display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-template-rows: auto;
		height: 100%;*/

	}
}

.card{
	padding: 3rem 2rem;
	text-align: left;
}

@media (min-width: 767px){
	.card{
		padding: 3rem 3rem;
	}
}

.card > * { margin-bottom: 2rem; }

.card > * + * { margin-bottom: 1.7rem; } 

.card__1{
	background: var(--box-color1);
	border-top-left-radius: var(--border-radius);
	border-top-right-radius: var(--border-radius);
}

@media (min-width: 767px){
	.card__1{
		border-top-right-radius: 0;
		border-bottom-left-radius: var(--border-radius);
	}
}

.card__2{ background-color: var(--box-color2); }

.card__3{
	background-color: var(--box-color3);
	border-bottom-right-radius: var(--border-radius);
	border-bottom-left-radius: var(--border-radius);
}

@media(min-width: 767px){
	.card__3{
		border-bottom-left-radius: 0;
		border-top-right-radius: var(--border-radius);
	}
}

.card__heading{
	font-family: var(--font-family2);
	color: var(--neutral-color);
	font-size: 3rem;
	font-weight: var(--fw-bolder);
	text-transform: uppercase;
}

.card__summary{
	color: var(--paragraph-color);
	font-weight: var(--fw-normal);
	font-size: 1.2rem;
}

.card__button{
	background:var(--neutral-color);
	border:none;
	padding: 1.2rem 1.8rem;
	border-radius: 30px;
	font-weight: var(--fw-bolder);
	font-size: 1.1rem;
}

@media(min-width: 767px){

	.card{
		overflow: hidden;
	}
	.card .card__button{
		margin-top: 3rem;
	}
	.card .card__button:hover{
		cursor: pointer;
		background: none;
		color: var(--neutral-color);
		border: 1px solid var(--neutral-color);
	}
}

.card__1 .card__button{
	color: var(--box-color1);
}

.card__2 .card__button{
	color:var(--box-color2);
}

.card__3 .card__button{
	color: var(--box-color3);
}

.card__image{ animation: car-animation 2000ms 2s ease-in;}

@keyframes car-animation{
	0%{
		transform: translateX(0px);
	}

	50%{
		transform: translateX(50px);
	}

	100%{
		transform: translateX(100px);
	}
}

